--- a/app/src/main/res/layout/room_list_item.xml
+++ b/app/src/main/res/layout/room_list_item.xml
@@ -20,6 +20,7 @@
             android:gravity="center_vertical"
             android:paddingLeft="10dp">
             <TextView
+                android:id="@+id/priceTxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="25sp"
@@ -27,12 +28,14 @@
                 android:textColor="#F67005"
                 android:text="8000"/>
             <TextView
+                android:id="@+id/addressAndFloorTxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="#000000"
                 android:layout_marginTop="5dp"
                 android:text="마포구 서교동, 1층"/>
             <TextView
+                android:id="@+id/descTxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
