--- a/app/src/main/res/layout/activity_detail_room.xml
+++ b/app/src/main/res/layout/activity_detail_room.xml
@@ -21,6 +21,7 @@
             android:gravity="center"
             android:padding="25dp">
             <TextView
+                android:id="@+id/priceTxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="25sp"
@@ -28,6 +29,7 @@
                 android:text="2억 8,500"
                 android:textStyle="bold"/>
             <TextView
+                android:id="@+id/descTxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="설명이 들어올 자리"
@@ -55,6 +57,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"/>
                 <TextView
+                    android:id="@+id/addressTxt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="#000000"
@@ -75,6 +78,7 @@
                     android:layout_height="wrap_content"
                     android:text="층수 정보"/>
                 <TextView
+                    android:id="@+id/floorTxt"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"/>
@@ -113,12 +117,14 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"/>
             <TextView
+                android:id="@+id/phoneNumTxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="#000000"
                 android:textSize="15sp"
                 android:text="010-1111-1212"/>
             <Button
+                android:id="@+id/dialBtn"
                 android:layout_marginLeft="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -129,6 +135,7 @@
             android:layout_height="0dp"
             android:layout_weight="1"/>
         <Button
+            android:id="@+id/closeBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="닫기"
